manifests/homesvc/traefik/externalname-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-externalname
  namespace: ingress
spec:
  type: ExternalName
  externalName: traefik.kube-system.svc.cluster.local
  ports:
    - port: 8080
