manifests/homesvc/traefik/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/traefik-dashboard"
            backend:
              service:
                name: traefik
                port:
                  number: 8080
